interpreter-janeklang/tests/bad/06_multipleMains_8.janek
int i = 2;

int asd(){
    return 0;
}

int main(){
    return 0;
}

int main(){
    return 0;
}